--- a/app/globals.css
+++ b/app/globals.css
@@ -1,27 +1,169 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+/* CSS reset  */
+* {
+    box-sizing: border-box;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+    &:after,
+    &:before {
+        box-sizing: border-box;
+    }
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+html,
+body {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    line-height: 1;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    touch-action: manipulation;
+    background-color: #ffffff;
+
+    -webkit-text-size-adjust: none;
+    touch-action: pan-y;
+    /*prevent user scaling*/
+}
+
+body::-webkit-scrollbar {
+    width: 0 !important
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+    overflow: -moz-scrollbars-none;
+    -ms-overflow-style: none;
+}
+
+body,
+textarea,
+input,
+button {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    color: #111111;
+}
+
+#root {
+    min-height: 100%;
+    min-width: 100%;
+}
+
+button,
+input,
+textarea {
+    outline: none;
+    border: none;
+    -webkit-appearance: none;
+    background-color: transparent;
+    text-align: left;
+}
+
+button {
+    cursor: pointer;
+    user-select: none;
+    padding: 0;
+    margin: 0;
+}
+
+a {
+    text-decoration: none;
+
+    &:hover {
+        text-decoration: none;
+    }
+
+    &:active {
+        text-decoration: none;
+    }
+}
+
+textarea {
+    resize: none;
+}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+* {
+    backface-visibility: hidden;
+}
+
+div {
+    &:focus {
+        outline: none;
+    }
+}
+
+/* Custom  */
+.home-layout {
+    padding: 18px;
+}
+
+li {
+    margin: 6px 0;
+}
+
+.player-frame {
+    position: absolute;
+    width: 100vw;
+    height: 100svh;
+    top: 0;
+    left: 0;
+    outline: none;
+    border: none;
+}
+
+.centered-frame {
+    position: absolute;
+    width: 100vw;
+    height: 100svh;
+    top: 0;
+    left: 0;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.form-area {
+    max-width: 300px;
+    width: 300px;
+    min-width: 300px;
+
+    display: flex;
+    flex-direction: column;
+}
+
+input {
+    border: 1px solid #eaeaea;
+    border-radius: 5px;
+
+    width: 100%;
+    padding: 12px;
+    font-size: 16px;
+    line-height: 1;
+
+    outline: none;
+    background-color: white;
+    color: black;
+
+    &:focus {
+        outline: none;
+        border: 1px solid #007aff;
+    }
+}
+
+button {
+    width: 100%;
+    padding: 14px;
+    background-color: #007aff;
+    color: white;
+    border-radius: 5px;
+    margin-top: 12px;
+    
+    font-size: 16px;
+    line-height: 1;
+    text-align: center;
 }
